@@ -488,6 +488,8 @@ Release 0.21.0 - Unreleased
    HBASE-2419  Remove from RS logs the fat NotServingRegionException stack
    HBASE-2286  [Transactional Contrib] Correctly handle or avoid cases where 
                writes occur in same millisecond (Clint Morgan via J-D)
+   HBASE-2360  Make sure we have all the hadoop fixes in our our copy of its rpc
+               (Todd Lipcon via Stack)
 
   NEW FEATURES
    HBASE-1961  HBase EC2 scripts
